<resources>
    <string name="app_name">Zopnote Distributor</string>
    <string name="gcm_defaultSenderId">898261426758</string>
    <string name="content_authority">com.zopnote.android.dealer</string>
    <string name="FACEBOOK_APP_ID">1546997928847077</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">c54bb3ae89a6db220c92c5666943514d</string>
    <string name="no_internet">No internet connection.</string>
    <string name="menu_about_title">About</string>
    <string name="menu_agreement_title">Agreement</string>
    <string name="menu_add_route_title">Add Route</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="nav_customers">Vendors</string>
    <string name="nav_indent">Indent</string>
    <string name="powered_by_zopnote">Powered by Zopnote</string>
    <string name="customer_mobile_no_label">Mobile: </string>
    <string name="customer_name_label">Name</string>
    <string name="door_no_label">Door number</string>
    <string name="new_location_label">Enter new location</string>
    <string name="address_line1_label">Floor</string>
    <string name="address_line2_label">Apartment / Layout / Area</string>
    <string name="recently_used_label">Recently used</string>
    <string name="copy_label">Copy</string>
    <string name="add_customer_step_profile">1. Profile</string>
    <string name="add_customer_step_review">Review and submit</string>
    <string name="review_mobile_number_label">Mobile number</string>
    <string name="review_customer_name_label">Name</string>
    <string name="review_door_number_label">Door number</string>
    <string name="review_newspaper_subscriptions_label">Newspapers</string>
    <string name="review_magazine_subscriptions_label">Magazines</string>
    <string name="add_subscription_label">Add Subscription</string>
    <string name="review_and_submit_label">Review and Submit</string>
    <string name="back_label">Back</string>
    <string name="next_label">Next</string>
    <string name="submit_label">Submit</string>
    <string name="exit_label">Exit</string>
    <string name="cancel_label">Cancel</string>
    <string name="select_label">Select</string>
    <string name="mobile_number_error_message">Please enter 10 digit mobile number</string>
    <string name="payment_date_error_message">Please select payment date</string>
    <string name="name_error_message">Please enter name</string>
    <string name="panNo_error_message">Please enter PAN no.</string>
    <string name="aadharNo_error_message">Please enter aadhar no.</string>
    <string name="business_name_error_message">Please enter business/company name</string>
    <string name="bank_account_name_error_message">Please enter bank account name</string>
    <string name="bank_account_no_error_message">Please enter bank account no.</string>
    <string name="bank_ifsc_code_error_message">Please enter bank ifsc no.</string>
    <string name="bank_name_error_message">Please enter bank ifsc no.</string>
    <string name="upload_proof_label">Upload Proof</string>
    <string name="ifsc_code_label">IFSC Code</string>
    <string name="bank_name_label">Bank Name</string>
    <string name="aadhar_no_label">Aadhar No</string>
    <string name="door_number_error_message">Please enter door number</string>
    <string name="addressline2_error_message">Please enter apartment or layout or area</string>
    <string name="route_error_message">Please select route</string>
    <string name="subscription_error_message">Please select at least 1 subscription</string>
    <string name="unsaved_changes_error_message">You have not saved this customer. Do you want to exit without saving?</string>
    <string name="selected_heading">%1$d selected</string>
    <string name="add_customer_running_message">Saving customer. Please wait&#8230;</string>
    <string name="add_customer_success_message">Customer saved successfully.</string>
    <string name="customers_empty_message">Start adding customers to see them here.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_share_app_title">Share &amp; Earn</string>
    <string name="menu_switch_vendor">Switch vendor</string>
    <string name="about_feedback"><![CDATA[Your feedback is greatly appreciated. Problems, suggestions, general queries please let us know.]]></string>
    <string name="support_email">care@ireff.in</string>
    <string name="info_label">Info</string>
    <string name="bullet_char">\u2022</string>
    <string name="button_skip">Skip</string>
    <string name="intro_page1_title">Take your business online</string>
    <string name="intro_page1_desc">Manage, invoice and collect payments</string>
    <string name="button_get_started">Get Started</string>
    <string name="signin_title">Sign In</string>
    <string name="button_retry">Retry</string>
    <string name="generic_error_message">Something went wrong.</string>
    <string name="hello_label">Hello!</string>
    <string name="amount_with_rupee_prefix">\u20b9%s</string>
    <string name="preference_show_otp_title">Show OTP popup</string>
    <string name="preference_show_otp_summary">When OTP SMS is received, display the OTP code in a floating popup window.</string>
    <string name="app_update_required">Update required</string>
    <string name="app_update_required_desc">This app has not been updated for some time. The current version is old and no longer supported. Please update the app to proceed.</string>
    <string name="app_update_available">Update available</string>
    <string name="app_update_available_desc">To get the best experience, please update your app to the latest version.</string>
    <string name="app_already_updated_toast">App is already updated.</string>
    <string name="app_version">App version:</string>
    <string name="app_version_name">2.0</string>
    <string name="update_available">Update available</string>
    <string name="button_update_now">UPDATE NOW</string>
    <string name="share_app_title">Try this app - Zopnote</string>
    <string name="share_app_text">I am using Zopnote for automated billing and online collection. It is safe, easy to use &amp; I love it!. You should sign-up at</string>
    <string name="cash_collection_label">Offline Collection</string>
    <string name="online_collection_label">Online collection</string>
    <string name="pending_label">Pending</string>
    <string name="payment_pending_label">Payment Pending</string>
    <string name="invoice_number_label">Invoice No.</string>
    <string name="billing_period_label">Billing Period</string>
    <string name="invoice_date_label">Invoice Date</string>
    <string name="total_due_label">Total due</string>
    <string name="accept_cash_payment_label">Receive Payment</string>
    <string name="enter_amount_label">Receive Payment</string>
    <string name="enter_part_advance_amount_label">Enter the amount ₹</string>
    <string name="accept_cash_payment_running_message">Updating payment. Please wait&#8230;</string>
    <string name="accept_cash_payment_success_message">Payment updated successfully.</string>
    <string name="search_hint">Search door number, name, area</string>
    <string name="search_title">Search</string>
    <string name="coming_soon">Coming soon</string>
    <string name="payment_option_next">Confirm</string>
    <string name="newspapers_label">Newspapers</string>
    <string name="magazines_label">Magazines</string>
    <string name="nav_products">Products</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="invoice_label">Invoice</string>
    <string name="items_label">Items</string>
    <string name="billed_to_label">Billed to</string>
    <string name="action_search">Search</string>
    <string name="no_matching_result">No matching results</string>
    <string name="accept_cash_payment_confirm_messgae">Have you received payment Rs. %s from customer? Once you confirm, this invoice will be updated as paid.</string>
    <string name="confirm_cash_payment_received">Confirm payment received</string>
    <string name="confirm_cash_payment_reverse">Confirm Payment Cancellation</string>
    <string name="cash_payment_received">Yes, Payment received</string>
    <string name="button_cancel">Cancel</string>
    <string name="set_date_label">set</string>
    <string name="pause_subscription_title_label">Pause:  %s</string>
    <string name="start_date_label">Start date</string>
    <string name="custom_label">Custom</string>
    <string name="check_out_date_label">Check out date</string>
    <string name="end_date_label">End date</string>
    <string name="date_range_error_toast">End date should be more than or equal to start date</string>
    <string name="update_pause_running_message">Updating pause. Please wait&#8230;</string>
    <string name="update_customer_mobile_message">Updating mobile number. Please wait&#8230;</string>
    <string name="reset_merchant_message">Reset merchant running. Please wait&#8230;</string>
    <string name="registering_merchant_message">Registering. Please wait&#8230;</string>
    <string name="request_advance">Requesting advance. Please wait&#8230;</string>
    <string name="settle_now">Settling. Please wait&#8230;</string>
    <string name="update_pause_success_message">Pause updated successfully.</string>
    <string name="customer_mobile_added">Mobile number updated successfully.</string>
    <string name="requested_advance">Requested advance successfully.</string>
    <string name="pause">Pause</string>
    <string name="subscription_price_per_issue_label">per issue</string>
    <string name="payment_mode_label">Paid %s</string>
    <string name="preparing_search_message">Preparing search, please wait&#8230;</string>
    <string name="add_subscription_step_start_date">2. Select start date</string>
    <string name="subscription_start_date_error_message">Please select subscription start date</string>
    <string name="checkout_date_error_message">Please select check out date</string>
    <string name="unsaved_add_subscription_changes_error_message">You have not added this subscription. Do you want to exit without saving?</string>
    <string name="add_subscription_success_message">Subscription added successfully.</string>
    <string name="subscription_daily_price">Daily Price</string>
    <string name="subscription_service_charge_label">Delivery Charge</string>
    <string name="button_close">Close</string>
    <string name="price_detail_service_charge_label">per month</string>
    <string name="title_activity_app_update_notification">Update</string>
    <string name="title_label">Title</string>
    <string name="message_label">Message</string>
    <string name="action_url_label">Action url</string>
    <string name="send_notification">Send Notification</string>
    <string name="to_one_merchant">Send to this merchant</string>
    <string name="to_all_merchants">Send to all merchants</string>
    <string name="merchant_name_label">Merchant Name:</string>
    <string name="business_name_label">Business Name:</string>
    <string name="prepaid_label">Pre-Paid</string>
    <string name="postpaid_label">Post-Paid</string>
    <string name="shop_setup_select_the_service">Select the service to setup the shop</string>
    <string name="shop_setup_select_pricing">Select Pricing:</string>
    <string name="shop_setup_select_billing_type">Select Billing Type:</string>
    <string name="newspaper1_label">News Paper</string>
    <string name="grocery_label">OnDemand</string>
    <string name="grocery1_label">Grocery</string>
    <string name="laundry_label">Laundry</string>
    <string name="distributor_label">Distributor</string>
    <string name="newspaper_label">NewsPaper</string>
    <string name="daily_label">Daily</string>
    <string name="monthly_label">Monthly</string>
</resources>