<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <!--/FrameLayout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:paddingBottom="40dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/merchant_name_label"/>

                        <TextView
                            android:id="@+id/merchantName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="Aleena"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/business_name_label"></TextView>

                        <TextView
                            android:id="@+id/merchantBusinessName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:text="Aleena Fruits"></TextView>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profilePic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:paddingBottom="30dp"
                        app:srcCompat="@drawable/ic_person_black_48dp" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/shop_setup_select_the_service"
                    android:textColor="@color/text_secondary"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

<HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radioGroupServices">

                    <RadioButton
                        android:id="@+id/radioButtonNewsPaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:transitionName="@string/newspaper_label"/>
                    <ImageView
                        android:id="@+id/img_Newspaper"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/zopnote_logo1" />

                    <RadioButton
                        android:id="@+id/radioButtonGrocery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:checked="true"
                        android:transitionName="@string/grocery_label"/>

                    <ImageView
                        android:id="@+id/img_grocery"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/zopnote_logo1"/>

                    <RadioButton
                        android:id="@+id/radioButtonDhobi"
                        android:layout_marginTop="10dp"
                        android:transitionName="@string/laundry_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/img_laundry"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/zopnote_logo1" />
                    <RadioButton
                        android:id="@+id/radioButtonDistri"
                        android:layout_marginTop="10dp"
                        android:transitionName="@string/distributor_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/img_Distributor"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/zopnote_logo1" />
                </RadioGroup>

            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_secondary"
        android:paddingLeft="30dp"
        android:text="@string/newspaper1_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            android:paddingLeft="30dp"
            android:text="@string/grocery1_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            android:paddingLeft="35dp"
            android:text="@string/laundry_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            android:paddingLeft="35dp"
            android:text="@string/distributor_label"/>
    </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/shop_setup_select_pricing"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp">
                </TextView>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="37dp"
                    android:id="@+id/radioGroupPricing">

                    <RadioButton
                        android:id="@+id/radioButtonDaily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/daily_label"/>

                    <RadioButton
                        android:id="@+id/radioButtonMonthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:checked="true"
                        android:text="@string/monthly_label" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/shop_setup_select_billing_type"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp">
                </TextView>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/radioGroupPaidType">

                    <RadioButton
                        android:id="@+id/radioButtonPrePaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/prepaid_label"/>

                    <RadioButton
                        android:id="@+id/radioButtonPostPaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textSize="14sp"
                        android:text="@string/postpaid_label" />
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">
                      <Button
                        android:id="@+id/submitShopSetup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activity_app_update_notification"
                        android:theme="@style/NormalButton" />

                    <Button
                        android:text="@string/next_label"
                        android:id="@+id/skipShopSetup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/NormalButton" />

                        <Button
                            android:id="@+id/closeShopSetup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_close"
                            android:theme="@style/NormalButton" />
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/networkErrorView"
            layout="@layout/network_error" />

        <include
            android:id="@+id/loadingView"
            layout="@layout/loading_view" />

    </LinearLayout>
</layout>
