<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".customers.CustomersActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar" >

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/notificationTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_label"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/notificationBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/message_label"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/notificationActionUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_url_label"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"/>

                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp">

                    <!--TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_route_label"
                        android:textColor="@color/text_primary"
                        android:paddingTop="8sp"
                        android:textSize="12sp" /-->

                    <RadioGroup
                        android:id="@+id/radioGroupMerchant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layoutDirection="ltr">

                        <RadioButton
                            android:id="@+id/radioBtnOneMerchant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:paddingLeft="10sp"
                            android:text="@string/to_one_merchant"
                            android:textColor="#424242"
                            android:textSize="18sp"
                            android:layout_marginBottom="12sp"/>

                        <RadioButton
                            android:id="@+id/radioBtnAllMerchants"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10sp"
                            android:text="@string/to_all_merchants"
                            android:textColor="#424242"
                            android:textSize="18sp" />
                    </RadioGroup>

                </LinearLayout>
                <Button
                    android:id="@+id/sendNotification"
                    android:theme="@style/NormalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp"
                    android:text="@string/send_notification"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center"/>
                <FrameLayout
                    android:id="@+id/contentFrame"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>
</layout>
